# haskell-readert

./: .gitignore  CHANGELOG.md  README.md  flake.nix  haskell-readert.cabal  project.nix  tags
lib/: Lib.hs
tests/: Main.hs
