cabal-version:      2.4
name:               haskell-readert
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Florian Beeres
maintainer:         yuuki@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-props
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingVia
    LambdaCase
    FlexibleInstances
    FlexibleContexts
    NamedFieldPuns
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables

library
  import:         shared-props
  hs-source-dirs: lib
  exposed-modules:
    Lib
  build-depends:
    , base          ^>=4.14.1.0
    , mtl
    , katip
    , safe-exceptions
    , transformers
    , text

executable haskell-readert
  main-is:        Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base             ^>=4.14.1.0
    , haskell-readert

  hs-source-dirs: app

test-suite tests
  import:         shared-props
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends:
    , base           ^>=4.14.1.0
    , haskell-readert
    , tasty
    , tasty-hunit
    , text
    , katip
    , mtl
    , transformers
    , safe-exceptions
    , stm
    , aeson
